@@ -1,3 +1,4 @@
+1944 [One-Click] audio language names added to the output file
 1943 [AVS Script Creator] VideoPlayer preview starts in 1:1 mode
      [AVS Script Creator] while cropping VideoPlayer preview moves to the cropping border
      [VideoPlayer] fixed a sizing problem when window was minimized
